End of section 4

--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -1,12 +1,12 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Data source = DatingApp.db"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "ConnectionStrings": {
-    "DefaultConnection": "Data source = DatingApp.db"
-  }
-
+  "TokenKey": "super secret unguessable key is very important key for the token creation now oedok rkermf efjer jonjdgf"
 }
